--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -11,4 +11,4 @@ jobs:
               run: ls
 
             - name: Read file
-              run: cat ../README.md
+              run: cat ../../README.md
