--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -4,14 +4,11 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
-            - name: Welcome message
-              run: echo "My first github actions"
-
             - name: Checkout Repo
               uses: actions/checkout@v4
 
-            - name: List files
-              run: ls
-
-            - name: Read file
-              run: cat README.md
+            - name: Running multiple
+              run: |
+               echo "My first github actions"
+               ld -ltra
+               cat README.md
